[package]
name = "rotation-logger"
version = "0.1.1"
edition = "2024"
authors = ["Zippelin"]
description = "Simple async logger with file rotation"
license = "MIT OR Apache-2.0" 
repository = "https://github.com/Zippelin/rotation_logger"
documentation = "https://docs.rs/rotation-logger" 
readme = "readme.md"
keywords = ["log", "logging", "logger", "log-rotation", "async-log"]
categories = ["development-tools", "development-tools::debugging"]

[dependencies]
chrono = "0.4.39"